--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
   </main>
   <footer>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#" target="_blank">Carlos Perez</a>.
+      Challenge by <a href="https://www.frontendmentor.io/profile/Carlos-A-P" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://carlospwd.netlify.app/">Carlos Perez</a>.
     </div>    
   </footer>
 </body>
